--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "precommit": "smallfish lint --staged --prettier --style --fix",
     "ci": "smallfish lint --style && smallfish cov"
   },
-  "dependencies": {},
+  "devDependencies": {
+    "eslint-config-smallfish": "^0.1.5"
+  },
   "engines": {
     "install-node": "10"
   }
