fix: ajax.js -> ajax.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,14 @@
 {
   "compilerOptions": {
+    "experimentalDecorators": true,
     "target": "es6",
     "module": "es6",
     "moduleResolution": "node",
     "jsx": "react",
     "baseUrl": ".",
     "paths": {
-      "components": ["components"]
+      "components": ["components"],
+      "@/*": ["./src/*"]
     },
     "allowSyntheticDefaultImports": true
   }
